[tool.poetry]
name = "robotframework-gevent"
version = "0.6.0"
description = "Run keywords asynchronously with the power of gevent"
authors = ["Eldad Uzman <eldadu1985@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "GeventLibrary", from = "src" }
]
repository = "https://github.com/eldaduzman/robotframework-gevent"

keywords = ["robotframework", "rpa", "automation", "asynchronous"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = ">=21.12,<23.0"
robotframework = ">=5.0.1,<7.0.0"
robotframework-pythonlibcore = ">=3,<5"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pylint = "^2.15.0"
black = "^22.8.0"
perflint = "^0.7.3"
robotframework-requests = "^0.9.3"
coverage = "^6.4.4"
cosmic-ray = "^8.3.5"
tox = "^3.25.1"
docutils = "^0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
